-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.9.3
-
None
-
706db17d9af2c52e5b3c1c0b01ae52c1650d3c16 (qt/qtbase/dev)
By default you are unable to scroll past the end of a file in the text editor. This can be changed by going to Preferences->Text Editor->Display->"Center cursor on scroll". Enabling the option initially does nothing. Only after a restart can you scroll past the end of the file.
Expected: the change should take effect immediately OR the user should get a warning saying they need to restart.